# strata

./: .gitignore  README.md  VALIDATION_POLICY.md  api_log.txt  index.html  package-lock.json  package.json  requirements.txt  shotgun.db-shm  shotgun.db-wal  test_ddg.py
.knowledge/: 00_task_decomposition.md  _pip_show_command_reference.md  apt_sources_list_command.md  codebase_analysis_overview.md  final_findings_sqlalchemy.md  final_research_20260323_190521.md  final_research_20260323_234601.md  final_research_20260324_002623.md  grep_filtering.md  installation_verification_methods.md  meta_decomposition_insight.md  model_performance_intel.md  original_task.md  pip_command_syntax.md  pip_list_command.md  pip_list_command_reference.md  pip_show_command_semantics.md  pip_show_sqlalchemy_analysis.md  pip_show_verbose_syntax.md  pip_sqlalchemy_check.md  provenance_index.json  python_installation_verification.md  python_module_check_practices.md  python_package_naming_conventions.md  python_version_check.md  research_subtask_01_installation_command.md  research_subtask_02_pip_show_command.md  security_scanner_config.json  sqlalchemy_import_command.md  sqlalchemy_import_error_handling.md  sqlalchemy_import_test.md  sqlalchemy_installation.md  sqlalchemy_installation_command.md  sqlalchemy_installation_methods.md  sqlalchemy_installation_verification_code.md  sqlalchemy_installed_packages.md  sqlalchemy_verification_task_decomposition.md  sqlalchemy_version_check.md  (+387 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+248 files in other folders)
