[package]
name = "strata-desktop"
version = "0.1.0"
description = "Thin Tauri shell for Strata"
authors = ["Strata"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
url = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
